# todolist

./: .gitignore  config.py  dependencies.py  main.py  models.py  pyproject.toml  routes.py  todolistdb.db
__pycache__/: main.cpython-311.pyc.2722220116128
alembic/: env.py
alembic/versions/: 77f634349c75_init_migrations.py  b50f37b61c20_change_column_name.py  eb87e8993cf3_fix.py
